# AoC

./: .gitignore  README.md
2015/Day1/1/: main.c
2015/Day1/2/: main.c
2015/Day2/1/: main.c
2015/Day2/2/: main.c
2015/Day3/1/: main.c
2015/Day3/2/: main.c
2015/Day4/: CMakeLists.txt  main.c
2015/Day5/1/: main.c
2015/Day5/2/: main.c
2015/Day6/1/: main.c
2015/Day6/2/: main.c
2015/template/1/: main.c
2023/Day 1/: 1.py  2.py
Day 1/: 1.py
